force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Filter_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Filter_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Contracted Prices</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>