force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/Filter_Product__c.field-meta.xml
<CustomField>
    <fullName>Filter_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracted Prices (Filter Product)</relationshipLabel>
    <relationshipName>Contracted_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>