force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterField__c</fullName>
    <description>Quote line field that&apos;s evaluated to determine if this contracted price applies.</description>
    <inlineHelpText>Select a field to use in a filter, such as Product Family, if you want to apply this price to a set of products. If you are using a custom field, add the API name to the Filter Field as a picklist value.</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Contracted_Price_Key__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>